build: update CMake project for lua-5.2.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 # -*- cmake -*-
 
+# I tend to use the CMake build for creating an Xcode project and then
+# using the analysis features.  To do this you can do the
+# following:
+#
+#   mkdir xcode-build
+#   cmake -G Xcode ..
+#   open CMD_KEY_HAPPY.xcodeproj
+#
+# and then build and analyze from the Project menu.
+
 # The name of our project is "CMD_KEY_HAPPY". Files in this project
 # can refer to the source directory of the project as
 # ${CMD_KEY_HAPPY_SOURCE_DIR} and to the root binary directory of the
@@ -28,40 +38,44 @@ For example:
 ")
 endif()
 
-add_definitions("-DLUA_USE_LINUX")
-include_directories(${CMD_KEY_HAPPY_SOURCE_DIR}/lua-5.1.4/src)
+add_definitions("-DLUA_USE_MACOSX")
+add_definitions("-DLUA_COMPAT_ALL")
+include_directories(${CMD_KEY_HAPPY_SOURCE_DIR}/lua-5.2.1/src)
 
 set(SRCS
   cmd-key-happy.m
-  lua-5.1.4/src/lapi.c
-  lua-5.1.4/src/lcode.c
-  lua-5.1.4/src/ldebug.c
-  lua-5.1.4/src/ldo.c
-  lua-5.1.4/src/ldump.c
-  lua-5.1.4/src/lfunc.c
-  lua-5.1.4/src/lgc.c
-  lua-5.1.4/src/llex.c
-  lua-5.1.4/src/lmem.c
-  lua-5.1.4/src/lobject.c
-  lua-5.1.4/src/lopcodes.c
-  lua-5.1.4/src/lparser.c
-  lua-5.1.4/src/lstate.c
-  lua-5.1.4/src/lstring.c
-  lua-5.1.4/src/ltable.c
-  lua-5.1.4/src/ltm.c
-  lua-5.1.4/src/lundump.c
-  lua-5.1.4/src/lvm.c
-  lua-5.1.4/src/lzio.c
-  lua-5.1.4/src/lauxlib.c
-  lua-5.1.4/src/lbaselib.c
-  lua-5.1.4/src/ldblib.c
-  lua-5.1.4/src/liolib.c
-  lua-5.1.4/src/lmathlib.c
-  lua-5.1.4/src/loslib.c
-  lua-5.1.4/src/ltablib.c
-  lua-5.1.4/src/lstrlib.c
-  lua-5.1.4/src/loadlib.c
-  lua-5.1.4/src/linit.c)
+  lua-5.2.1/src/lapi.c
+  lua-5.2.1/src/lauxlib.c
+  lua-5.2.1/src/lbaselib.c
+  lua-5.2.1/src/lbitlib.c
+  lua-5.2.1/src/lcode.c
+  lua-5.2.1/src/lcorolib.c
+  lua-5.2.1/src/lctype.c
+  lua-5.2.1/src/ldblib.c
+  lua-5.2.1/src/ldebug.c
+  lua-5.2.1/src/ldo.c
+  lua-5.2.1/src/ldump.c
+  lua-5.2.1/src/lfunc.c
+  lua-5.2.1/src/lgc.c
+  lua-5.2.1/src/linit.c
+  lua-5.2.1/src/liolib.c
+  lua-5.2.1/src/llex.c
+  lua-5.2.1/src/lmathlib.c
+  lua-5.2.1/src/lmem.c
+  lua-5.2.1/src/loadlib.c
+  lua-5.2.1/src/lobject.c
+  lua-5.2.1/src/lopcodes.c
+  lua-5.2.1/src/loslib.c
+  lua-5.2.1/src/lparser.c
+  lua-5.2.1/src/lstate.c
+  lua-5.2.1/src/lstring.c
+  lua-5.2.1/src/lstrlib.c
+  lua-5.2.1/src/ltable.c
+  lua-5.2.1/src/ltablib.c
+  lua-5.2.1/src/ltm.c
+  lua-5.2.1/src/lundump.c
+  lua-5.2.1/src/lvm.c
+  lua-5.2.1/src/lzio.c)
 
 set_source_files_properties(cmd-key-happy.m PROPERTIES COMPILE_FLAGS "-std=c99 -Wall -Wunused -Wno-unused-parameter")
 set_source_files_properties(${SRCS} PROPERTIES LANGUAGE C)
